# intercept

./: LICENSE.md  README.md  pyproject.toml  setup.cfg
config/: certificate.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
examples/: Dockerfile  main.py  requirements.txt  webhook.yaml
intercept/: __init__.py  defaulting.py  models.py  responses.py  types.py  webhook.py  webhook_test.py
