[metadata]
name = kubernetes-intercept
description = Webhook framework for Kubernetes admission webhooks
long_description = file: README.md, LICENSE.md
keywords = kubernetes, webhook
license = Apache License 2.0
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"